# rustty

./: .dockerignore  Cargo.toml  Dockerfile  PRODUCTION_READINESS.md  README.md  WASM_SECURITY.md  docker-compose.yml
core/: Cargo.toml
core/src/: compaction.rs  lib.rs  security.rs  wasm.rs
docs/: INTERNALS.md
examples/: advanced.rs  basic.rs  transaction.rs  wasm_security.rs
fixtures/: calculate_tax.wat
query/: Cargo.toml
query/src/: lib.rs  transaction.rs
schema/: Cargo.toml
schema/src/: lib.rs
server/: Cargo.toml
src/: main.rs
storage/: Cargo.toml
storage/src/: compaction.rs  garbage_collector.rs  index.rs  lib.rs  mvcc.rs  security_layer.rs
tests/: cli_tests.rs  query_tests.rs  storage_tests.rs  transaction_tests.rs
wasm/: Cargo.toml
wasm/src/: host_functions.rs  lib.rs  registry.rs  runtime.rs  sandbox.rs
