[package]
name = "Rustdb"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_db_core = { path = "./core" }
rust_db_schema = { path = "./schema" }
rust_db_storage = { path = "./storage" }
rust_db_query = { path = "./query" }
rust_db_wasm = { path = "./wasm" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
bincode = "1.3"

[[example]]
name = "basic"

[workspace]
members = [
    "core",
    "schema",
    "storage",
    "query",
    "wasm",
    "server",
]
resolver = "2" # Specifies the modern feature resolver

[workspace.dependencies]
tokio = "1.47.1"
async-trait = "0.1.89"
serde = "1.0.228"
thiserror = "2.0.17"
