[package]
name = "rust_db_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bincode = "1.3"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
log = "0.4.28"
memmap = "0.7.0"
rust_db_core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread","time"] }
