[package]
name = "rust_db_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_db_core = { path = "../core" }
wasmtime = { version = "14.0", features = ["async"] }
wasmtime-wasi = "14.0"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
log = "0.4"
ring = { workspace = true }
base64 = "0.21"
hex = "0.4"
